# nn11

./: CMakeLists.txt  CMakePresets.json  README.md  build_local.bat  vcpkg.json
.github/workflows/: build.yml
.github/workflows/.github/workflows/: build.yml
include/core/: ColorDetection.h  MouseController.h  Overlay.h  ScreenCapture.h  Tracker.h
include/ui/: AdvancedColorPicker.h  ColorPicker.h  MainWindow.h
include/utils/: ConfigManager.h  StatsTracker.h  TranslationManager.h
resources/: resources.qrc
resources/styles/: dark.qss
src/: main.cpp
src/core/: ColorDetection.cpp  MouseController.cpp  Overlay.cpp  ScreenCapture.cpp  Tracker.cpp
src/ui/: AdvancedColorPicker.cpp  ColorPicker.cpp  MainWindow.cpp
src/utils/: ConfigManager.cpp  StatsTracker.cpp  TranslationManager.cpp
